RESOLVED FIXED 153577
REGRESSION(r190430): Assertion failure in Text::~Text()
https://bugs.webkit.org/show_bug.cgi?id=153577
Summary REGRESSION(r190430): Assertion failure in Text::~Text()
Ryosuke Niwa
Reported 2016-01-27 19:19:46 PST
When a slot element is removed from the document, we fail to detach render objects from its children.
Attachments
Fixes the bug (4.35 KB, patch)
2016-01-27 19:55 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2016-01-27 19:55:57 PST
Created attachment 270078 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2016-01-27 20:42:41 PST
Comment on attachment 270078 [details] Fixes the bug Clearing flags on attachment: 270078 Committed r195727: <http://trac.webkit.org/changeset/195727>
Ryosuke Niwa
Comment 3 2016-01-27 20:42:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.